--- a/lazyfood_lib/Cargo.toml
+++ b/lazyfood_lib/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["Artur Sinila <freesoftware@logarithmus.dev>"]
 edition = "2018"
 
 [dependencies]
-html5ever = "0.25.1"
 reqwest = { version = "0.11.3", features = ["cookies", "gzip", "brotli"] }
+select = "0.5.0"
+tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
