--- a/lazyfood_lib/Cargo.toml
+++ b/lazyfood_lib/Cargo.toml
@@ -5,16 +5,17 @@ authors = ["Artur Sinila <freesoftware@logarithmus.dev>"]
 edition = "2018"
 
 [dependencies]
-thiserror = "1.0.24"
-tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
-reqwest = { version = "0.11.3", features = ["cookies", "json", "gzip", "brotli"] }
-select = "0.5.0"
-validator = { version = "0.13.0", features = ["derive", "phone"] }
-rusty-money = "0.4.1"
-chrono = "0.4.19"
-smallstr = "0.2.0"
-chrono-tz = "0.5.3"
-getset = "0.1.1"
-regex = "1.5.4"
-lazy_static = "1.4.0"
-serde_json = "1.0.64"
+thiserror = "1"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+reqwest = { version = "0.11", features = ["cookies", "json", "gzip", "brotli"] }
+select = "0.5"
+validator = { version = "0.13", features = ["derive", "phone"] }
+rusty-money = { git = "https://github.com/Logarithmus/rusty_money", branch = "serde", features = ["serde"] }
+chrono = { version = "0.4", features = ["serde"] }
+chrono-tz = "0.5"
+getset = "0.1"
+regex = "1"
+lazy_static = "1"
+toml = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1"
